--- a/test-nsa-tech-card.html
+++ b/test-nsa-tech-card.html
@@ -5,11 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NSA技术卡片测试</title>
     
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Google+Sans:wght@400;500;700&family=Roboto:wght@300;400;500;700&family=LXGW+WenKai:wght@400;700&family=Noto+Sans+SC:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- Local Material Icons -->
+    <link rel="stylesheet" href="assets/vendor/material-icons/material-icons.css">
     
     <!-- Modern CSS -->
     <link rel="stylesheet" href="assets/css/modern-design.css">
