Fix template/style effect and cache stale scripts

--- a/index.html
+++ b/index.html
@@ -638,19 +638,19 @@
     </div>
 
     <!-- Scripts -->
-    <script src="assets/js/utils.js"></script>
-    <script src="assets/js/content-analyzer.js"></script>
-    <script src="assets/js/advanced-image-generator.js"></script>
-    <script src="assets/js/prompt-engine.js"></script>
-    <script src="assets/js/premium-prompt-engine.js"></script>
-    <script src="assets/js/premium-card-generator.js"></script>
-    <script src="assets/js/templates.js"></script>
-    <script src="assets/js/content-optimizer.js"></script>
-    <script src="assets/js/visual-generator.js"></script>
-    <script src="assets/js/preview-system.js"></script>
-    <script src="assets/js/performance-optimizer.js"></script>
-    <script src="assets/js/ui.js"></script>
-    <script src="assets/js/generator.js"></script>
-    <script src="assets/js/app.js"></script>
+    <script src="assets/js/utils.js?v=20260223"></script>
+    <script src="assets/js/content-analyzer.js?v=20260223"></script>
+    <script src="assets/js/advanced-image-generator.js?v=20260223"></script>
+    <script src="assets/js/prompt-engine.js?v=20260223"></script>
+    <script src="assets/js/premium-prompt-engine.js?v=20260223"></script>
+    <script src="assets/js/premium-card-generator.js?v=20260223"></script>
+    <script src="assets/js/templates.js?v=20260223"></script>
+    <script src="assets/js/content-optimizer.js?v=20260223"></script>
+    <script src="assets/js/visual-generator.js?v=20260223"></script>
+    <script src="assets/js/preview-system.js?v=20260223"></script>
+    <script src="assets/js/performance-optimizer.js?v=20260223"></script>
+    <script src="assets/js/ui.js?v=20260223"></script>
+    <script src="assets/js/generator.js?v=20260223"></script>
+    <script src="assets/js/app.js?v=20260223"></script>
 </body>
 </html>
